Add basic backtest engine.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /ppo_algo/gyms/ppo_crypto_trading_tensorboard/
 /ppo_algo/gyms/ppo_crypto_trading.zip
+/examples/train/ppo_crypto_trading.zip
+/examples/train/ppo_crypto_trading_tensorboard/
